PharmaDemo/src/objects/Code__c.object
<CustomObject>
    <description>Used by Informatica to map codes with actual descriptions</description>
    <fields>
        <fullName>COD_ID_CEGEDIM__c</fullName>
        <externalId>true</externalId>
        <label>COD_ID_CEGEDIM</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Update__c</fullName>
        <label>Last Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>List_Code__c</fullName>
        <label>List Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Label__c</fullName>
        <label>List Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Long_Description__c</fullName>
        <label>Long Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <label>Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>COD_ID_CEGEDIM__c</columns>
        <columns>Country__c</columns>
        <columns>Last_Update__c</columns>
        <columns>List_Code__c</columns>
        <columns>List_Label__c</columns>
        <columns>Long_Description__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CODE-{0000}</displayFormat>
        <label>Code No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Code</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>